# Bonjour-chat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  init.sql  test_api.sh
db/: init.sql  migrate.sh
db/migrations/: 001_initial_schema.sql  002_groups.sql  003_refresh_tokens.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/components/: Auth.svelte  CallModal.svelte  ChatLayout.svelte  ChatWindow.svelte  CreateGroup.svelte  GroupCallModal.svelte  GroupCallPicker.svelte  GroupSettings.svelte  MessageInput.svelte  NewConversation.svelte  ProfileModal.svelte  Sidebar.svelte
frontend/src/lib/: api.js  notifications.js  stores.js
src/: config.rs  crypto.rs  db.rs  errors.rs  main.rs
src/handlers/: auth.rs  groups.rs  messages.rs  mod.rs  notifications.rs  uploads.rs  users.rs  ws.rs
src/middleware/: auth.rs
src/models/: group.rs  message.rs  mod.rs  push_subscription.rs  user.rs
